--- a/src/test/resources/config/local.properties
+++ b/src/test/resources/config/local.properties
@@ -1,6 +1,7 @@
 browser=chrome
 browserVersion=99.0
 browserSize=1920x1080
+timeout=
 browserMobileView=
 #browserMobileView=iPhone X
 remoteDriverUrl=
