--- a/src/test/resources/config/local.properties
+++ b/src/test/resources/config/local.properties
@@ -1,7 +1,7 @@
-browser=chrome
-browserVersion=91.0
+browser=firefox
+browserVersion=98.0
 browserSize=1920x1080
-timeout=4000
+timeout=12000
 browserMobileView=
 #browserMobileView=iPhone X
 remoteDriverUrl=
