--- a/src/test/resources/config/local.properties
+++ b/src/test/resources/config/local.properties
@@ -1,9 +1,9 @@
-browser=firefox
-browserVersion=98.0
+browser=opera
+browserVersion=
 browserSize=1920x1080
-timeout=4000
+timeout=10000
 browserMobileView=
 #browserMobileView=iPhone X
 remoteDriverUrl=
 videoStorage=
-timeoutVideoAttach=1000
+timeoutVideoAttach=5000
