--- a/src/test/resources/config/local.properties
+++ b/src/test/resources/config/local.properties
@@ -1,9 +1,9 @@
-browser=opera
-browserVersion=
+browser=chrome
+browserVersion=91.0
 browserSize=1920x1080
-timeout=10000
+timeout=4000
 browserMobileView=
 #browserMobileView=iPhone X
 remoteDriverUrl=
 videoStorage=
-timeoutVideoAttach=5000
+timeoutVideoAttach=1000
