--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,9 @@ tasks.withType(JavaCompile) {
 tasks.withType(Test) {
     systemProperties(System.getProperties())
     useJUnitPlatform()
+    systemProperty 'allure.link.tms.pattern', 'https://jira.atlassian.com/browse/{}'
+    systemProperty 'allure.link.issue.pattern', 'https://jira.atlassian.com/browse/{}'
+
 
     if (System.getProperty("threads") != null) {
         systemProperties += [
